--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<div class="jumbotron">
+    <h1>Formulario</h1>
+    <form method="post" action="{{url_for('datos')}}">
+        Archivo: <input type="FILE" name="file"/>
+        <input type="submit" name="Upload" value="Subir" />
+    </form>
+</div>
 
-<h1>About</h1>
 
 {% endblock%}
