--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('about') }}">About</a>
+            <a class="nav-link" href="{{ url_for('about') }}">Formulario</a>
           </li>
         </ul>
       </div>
