--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 {% extends "layout.html" %}
-
 {% block content %}
+
 <div class="jumbotron">
     <h1>Formulario</h1>
-    <form method="post" action="{{url_for('datos')}}">
-        Archivo: <input type="FILE" name="file"/>
-        <input type="submit" name="Upload" value="Subir" />
+    <form action="" method="post" enctype="multipart/form-data">
+        {{ form.csrf_token }}
+        Archivo: {{ form.archivo.label() }} {{ form.archivo() }}
+        {{ form.submit }}
     </form>
 </div>
-
 
 {% endblock%}
