El archivo se abre y se lee correctamente

--- a/templates/datos.html
+++ b/templates/datos.html
@@ -4,6 +4,7 @@
 
 <div class="jumbotron">
   <h1 class="display-4">Archivo recibido</h1>
+  <p>El Archivo dice: {{lec}}</p>
 </div>
 
 {% endblock%}
