--- a/templates/datos.html
+++ b/templates/datos.html
@@ -5,16 +5,18 @@
 <div class="jumbotron">
   <div>
     <h1 class="display-4">Archivo recibido</h1>
-    <p>El Archivo dice: {{Param}}</p>
   </div>
 
   <div>
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="" method="POST">
       {{ form.csrf_token }}
-         {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto()}} {{form.productos.label() }} {{form.productos()}}<br/>
-         
-  		<br/>
-  		  {{form.submit()}}
+         {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto()}} {{form.productos.label() }} {{form.productos()}} {{form.submit(class="btn btn-success")}}<br/>
+      <br/>
+      <div>
+        Ingreso: {{ message }}
+      </div>
+      <br/>
+      <input class="btn btn-outline-primary" type = "submit" name = "enviar" value = "Enviar"/>
     </form>
   </div>
 </div>
