--- a/templates/datos.html
+++ b/templates/datos.html
@@ -10,7 +10,7 @@
   <div>
     <form action="" method="POST">
       {{ form.csrf_token }}
-         {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto()}} {{form.productos.label() }} {{form.productos()}} {{form.submit(class="btn btn-success")}}<br/>
+         {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto()}} {{form.productos.label() }} {{form.productos()}} {{form.agregar(class="btn btn-success")}}<br/>
       <br/>
       <div>
         Ingreso: {{ message }}
