--- a/templates/datos.html
+++ b/templates/datos.html
@@ -14,6 +14,7 @@
       <br/>
       <div>
         Ingreso: {{ message }}
+        {{ message2 }}
       </div>
       <br/>
       <input class="btn btn-outline-primary" type = "submit" name = "enviar" value = "Enviar"/>
