--- a/templates/rutas.html
+++ b/templates/rutas.html
@@ -4,6 +4,7 @@
 <div class="jumbotron">
     <div>
       <h1 class="display-4">Rutas Ingresadas</h1>
+      Camiones: {{ Camiones }}
     </div>
   
     
