--- a/templates/datos.html
+++ b/templates/datos.html
@@ -4,7 +4,7 @@
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" id = trans>
 
   <div align='center'>
             <h1 class="display-4">Archivo recibido</h1>
@@ -32,9 +32,9 @@
           <hr style="width:75%;">
           <p>
 
-          <form action="" method="POST">
+          <form action="#trans" method="POST">
             {{ form.csrf_token }}
-                {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto()}} {{form.productos.label() }} {{form.productos()}} {{form.agregar(class="btn btn-success")}}<br/>
+                {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}} {{form.punto.label() }} {{form.punto(placeholder="Ej: 1,2,3")}} {{form.productos.label() }} {{form.productos(placeholder="Ej: 300,300,400")}} {{form.agregar(class="btn btn-success")}}<br/>
             <br/>
             <div>
               Ingreso: {{ message }}
