--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
   </p>
   <hr class="my-4">
   <p>Se deben usar coordenadas GPS cargadas desde un archivo</p>
-  <a class="btn btn-primary btn-lg" href="{{ url_for('about')}}" role="button">About</a>
+  <a class="btn btn-primary btn-lg" href="{{ url_for('about')}}" role="button">Siguiente</a>
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}">
 </div>
 
