--- a/templates/datos.html
+++ b/templates/datos.html
@@ -35,7 +35,7 @@
 
         <form action="#trans" method="POST" id = trans>
           {{ form.csrf_token }}
-              {{form.camion.label() }} {{form.camion()}} {{form.centro.label() }} {{form.centro()}}{{form.punto.label() }} 
+              {{form.centro.label() }} {{form.centro()}}{{form.punto.label() }} 
             <p>
               {{form.punto(placeholder="Ej: 1,2,3")}}{{form.productos.label() }} {{form.productos(placeholder="Ej: 300,300,400")}} {{form.agregar()}}<br/>
           </p>
