--- a/templates/rutas.html
+++ b/templates/rutas.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 <div class="jumbotron">
+  <div class="logmod__heading">
+  <img src="{{ url_for('grafica') }}"  height="500" class="center" />
+
+
     <div>
       <h1 class="display-4">Rutas Ingresadas</h1>
       Asignacion: {{ Asignacion }}<br/>
@@ -12,7 +16,7 @@
       <br/>
     </div>
   
-    
+  </div>
   </div>
 
 
