--- a/templates/about.html
+++ b/templates/about.html
@@ -3,12 +3,13 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Formulario</h1>
+    <h1>A continuacion cargue las coordenadas GPS</h1>
+    <br/>
     <form action="" method="post" enctype="multipart/form-data">
         {{ form.csrf_token }}
-        Ingresar Archivo: {{ form.archivo.label() }} {{ form.archivo() }}<br/>
+        <p>Cargar coordenadas: {{ form.archivo.label() }} {{ form.archivo(class="btn btn-secondary") }}</p><br/>
         
-        {{ form.submit(Class="btn btn-primary",value = "Siguiente") }}
+        {{ form.submit(Class="btn btn-primary",value = "Enviar") }}
 
     </form>
 </div>
