--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,15 +14,11 @@
   <body>
     <div class="logmod">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{{ url_for('home') }}">Grafos Integral</a>
-  
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-        </ul>
-      </div>
+      <a class="navbar-brand" href="{{ url_for('home') }}">
+        <img src="/static/geografia.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+        Grafos Integral</a>
     </nav>
   
-
     <div class="container p-4">
       {% block content %}
       {% endblock%}
