Add: Validacion Enviar datos

--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ html {
     bottom: 0;
     left: 0;
     opacity: 1;
-    background:url(/static/conec.jpg);
+    background:url(/static/p6f1.jpg);
     z-index: 1;
     background-size: cover;
     overflow-y: auto;
