--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,16 +13,16 @@
   </head>
   <body>
     <div class="logmod">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{{ url_for('home') }}">
-        <img src="/static/geografia.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-        Grafos Integral</a>
-    </nav>
-  
-    <div class="container p-4">
-      {% block content %}
-      {% endblock%}
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
+          <img src="/static/geografia.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+          Grafos Integral</a>
+      </nav>
+    
+      <div class="container p-4">
+        {% block content %}
+        {% endblock%}
+      </div>
     </div>
-
   </body>
 </html>
